creusot/tests/should_fail/mutual_rec_types.rs
struct T(Box<U>);
struct U(Box<T>);

fn main () {}
